--- a/about.css
+++ b/about.css
@@ -115,7 +115,14 @@ background: black;
     margin-bottom: 2%;
 }
 
-
+#inside {
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2%;
+    display: none;
+}
 
 .hero-image{
     width: 100%;
@@ -410,56 +417,41 @@ border: 1px solid var(--MET1-SUB-CARD-BORDER, #151515);
 
 
 
-   footer{
+  /* footer */
+
+  footer{
     width: 100%;
     height: 250px;
- margin-top: 4%;
- padding: 0% 3%;
-  
+    margin-top: 7%;
+  padding: 0% 3%;
+
+
 }
 .up{
     width: 100%;
     height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+display: flex;
+justify-content: center;
+}
 
-}
-.down{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #151515;
-}
-.down span{
-    color: #FFF;
-
-/* met/18-R */
-font-family: Lato;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height:22px; /* 21.6px */
-text-align: center;
-}
 .min-up{
-    width: 78%;
+    width:87%;
     height: 200px;
     display: flex;
     justify-content: center;
     padding:1% 0%;
-   
+
 
 }
+
+
 .log{
     width: 30%;
     height: 170px;
     display: flex;
-    justify-content:start;
+    justify-content:center;
 
- padding:2.5% 0%;
+ padding:1% 0%;
  
 }
 
@@ -467,14 +459,29 @@ text-align: center;
     width: 120px;
     height: 120px;
 }
+
+
+#fl-ex{
+    width:40%;
+    height:170px;
+    display: flex;
+    justify-content:start;
+}
+
+
 .pol{
 
-    width: 25%;
+    width:60%;
     height: 170px;
    display: flex;
    justify-content:center;
-   padding:1% 0%;
+  
 
+
+}
+.cen p a{
+    color: #FFF;
+    text-decoration: none;
 }
 .cen{
     width: 70%;
@@ -501,16 +508,12 @@ font-weight: 300;
 text-align: start;
 line-height: 18px;
 }
-
-.cen p a{
-    color: #FFF;
-    text-decoration: none;
-}
 .soc{
 
-    width: 20%;
+    width: 40%;
     height: 170px;
-    padding:1% 0%;
+    
+
 
 }
 .soc-img{
@@ -534,11 +537,37 @@ line-height: 18px;
 }
 .dow{
 
-    width: 20%;
+    width: 30%;
     height: 170px;
-    padding:1% 0%;
+
   
 }
+
+
+.down{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #151515;
+}
+.down span{
+    color: #FFF;
+
+/* met/18-R */
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height:22px; /* 21.6px */
+text-align: center;
+}
+
+
+
+
+
 @media(max-width:1300px){
 
     .menu-toggle {
@@ -555,21 +584,37 @@ line-height: 18px;
     #side-logo {
         display: none;
      }
+     #inside {
+       
+        display:block;
+        height:0px;
+        
+    }
+    #inside-logo{
+       
+        display:flex;
+        justify-content: space-between;
+        padding-top: 20%;
+    }
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;  
+       
     }
     .nav-links {
         display: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw; /* Full viewport width */
+        height: 100vh; /* Full viewport height */
+        background: rgba(0, 0, 0, 0.8); /* Black with 80% opacity */
+        padding: 0;
+        margin: 0;
+        z-index: 1000;
         
     }
  
@@ -750,30 +795,87 @@ line-height: 18px;
 
 
 
+
+
+}
+
+@media(max-width:900px){
+    footer{
+        width: 100%;
+        height:700px;
+        margin-top:0%;
+        overflow: hidden;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
     
+    }
     .min-up{
-        width: 95%;
+        width: 100%;
+        height: 650px;
+     flex-direction: column;
+     justify-content: center;
+    
     }
-    .log{
-
-        width: 25%;
-        
-    }
-    .pol{
-        width: 25%;
-
-    }
-    .cen p{
-     
-        padding:0%;
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
     }
     .soc{
-        width: 25%;
+    
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
+    }
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align:start;
+    }
+    .cen p{
+    text-align:start;
+    }
+    .pol{
+    
+        width:50%;
+        height:auto;
+      
+       
+    }
+    .cen{
+        width:30%;
+        padding:2% 0%;
     }
     .dow{
-        width: 25%;
+    width:100%;
+    height:auto;
+    display: flex;
+    justify-content:end;
+      
     }
-
+    .soc-img1{
+       
+        width: 150px;
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .pol .cen{
+        width: 100%;
+    }
 }
 
 @media(max-width:880px){
@@ -801,20 +903,9 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;  
+     
     }
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
-        
-    }
+
  
     .nav-links li a{
         width:100%;
@@ -980,11 +1071,10 @@ line-height: 18px;
             width:200px;
             height: 200px;
            }
-
            footer{
             width: 100%;
             height:700px;
-           margin-top: -10%;
+            margin-top:0%;
           
         }
         .up{
@@ -994,48 +1084,56 @@ line-height: 18px;
         }
         .min-up{
             width: 100%;
-            height: 700px;
+            height: 650px;
          flex-direction: column;
          justify-content: center;
         
         }
+        #fl-ex{
+            width: 100%;
+            justify-content: center;
+            padding: 10%;
+        }
         .soc{
         
-            width:100%;
-            height: 150px;
-            padding:9% 0%;
-            padding-left: 23.5%;
+            width:50%;
+            height:auto;
+            padding-left:25%;
+            
         }
         .soc-img{
             display: flex;
-            justify-content:center;
+            justify-content:start;
             gap: 20px;
         }
         .log{
             width:100%;
+            height: auto;
             display: flex;
             justify-content: center;
         }
         .cen h3{
-        text-align: center;
+        text-align:start;
         }
         .cen p{
-        text-align: center;
+        text-align:start;
         }
         .pol{
         
-            width:100%;
-            height:150px;
+            width:50%;
+            height:auto;
+          
            
         }
         .dow{
         width: 100%;
-        padding-left: 23.5%;
           
         }
         .soc-img1{
+           
+          
             display: flex;
-            justify-content:center;
+            justify-content:start;
             gap: 20px;
         }
           
@@ -1050,21 +1148,184 @@ line-height: 18px;
     .m-card{
        padding-top:60%;
     }
+    .img-text img {
+        width: 20px;
+        height: 20px;
+   margin-bottom:5%;
+       
+    }  
 }
 @media(max-width:650px){
     .m-card{
        padding-top:70%;
     }
+
+    footer{
+        width: 100%;
+        height:700px;
+        margin-top:0%;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 650px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
+    .soc{
+    
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
+    }
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align:start;
+    }
+    .cen p{
+    text-align:start;
+    }
+    .pol{
+    
+        width:50%;
+        height:auto;
+      
+       
+    }
+    .dow{
+    width: 100%;
+
+      
+    }
+    .soc-img1{
+       
+   
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .cen{
+        margin-top: -2%;
+    }
+}
+
+
+@media(max-width:600px){
+    .dow{
+        width: 100%;
+        
+        }
+        .soc-img1{
+            width:100px;
+            display: flex;
+            justify-content:start !important;
+        }
+  
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 10px;
+      
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+
+    .cen h3{
+        text-align:start;
+        font-size: 3vw;
+        }
+        .cen p{
+            font-size: 2.5vw !important;
+        }
+
+    .soc-img1{
+        display: flex;
+        justify-content:start !important;
+        gap: 20px;
+        width: 120px;
+    }
+    .soc-img1 img{
+        width: 23px;
+        height: 23px;
+    }
+}
+
+
+@media(max-width:560px){
+    .m-card{
+        padding-top: 100%;
+    }
+    .img-text img {
+        width: 20px;
+        height: 20px;
+   margin-bottom:6%;
+       
+    } 
+    .soc-img1{
+        display: flex;
+        justify-content:start!important;
+        gap: 20px;
+       
+    } 
 }
 @media(max-width:500px){
     .m-card{
-       padding-top:100%;
+       padding-top:110%;
+    }
+    .soc-img1{
+        display: flex;
+        justify-content:start !important;
+        gap: 20px;
+        
     }
 }
 @media(max-width:430px){
     .m-card{
-       padding-top:120%;
+       padding-top:130%;
     }
+    .img-text img {
+        width: 20px;
+        height: 20px;
+   margin-bottom:7%;
+       
+    }  
+    .soc-img1{
+        display: flex;
+        justify-content:start !important;
+        gap: 20px;
+        
+    }
+    .cen{
+        margin-top:-10%;
+    }
+    .pol{
+        padding-top:2%;
+    }
+
 }
 
 @media (max-width:400px) {
@@ -1082,20 +1343,9 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:40%;  
-    }
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content:space-evenly;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
         
     }
+
 
  
     .nav-links li a{
@@ -1129,7 +1379,7 @@ line-height: 18px;
     .img-text img {
         width: 20px;
         height: 20px;
-    margin-bottom:15%;
+    margin-bottom:8%;
        
     }  
      #margon{
@@ -1140,7 +1390,7 @@ line-height: 18px;
 
     
     .img-text p {
-    font-size:20px;     
+    font-size:4.5vw;     
     }
 
     .gallery2{
@@ -1198,7 +1448,7 @@ line-height: 18px;
             width:100%;
             height:300px;
             margin-left:0%;
-            margin-top: -80px;
+            margin-top: -130px;
            }
            .m-card h1{
             line-height:25px;
@@ -1249,12 +1499,14 @@ line-height: 18px;
 
            .log-karke{
             width: 100%;
-            height: 800px;
+            height: 500px;
+            margin-top: -20%;
            }
            .sec-log{
             width: 85%;
-            height:800px;
+            height:500px;
             flex-direction: column;
+            
            }
            .log-pera{
             width:100%;
@@ -1266,15 +1518,14 @@ line-height: 18px;
             height: 300px;
            }
            .log-img img{
-            width:200px;
-            height: 200px;
+            width:150px;
+            height: 150px;
            }
 
            footer{
             width: 100%;
-            height:700px;
-           margin-top: -10%;
-          
+            height:700px; 
+          margin-top:0%;
         }
         .up{
             width: 100%;
@@ -1288,46 +1539,70 @@ line-height: 18px;
          justify-content: center;
         
         }
+        #fl-ex{
+            width: 100%;
+        }
         .soc{
         
-            width:100%;
+            width:50%;
             height: 150px;
             padding:9% 0%;
-            padding-left: 23.5%;
+            padding-left:10%;
         }
         .soc-img{
             display: flex;
-            justify-content:center;
-            gap: 20px;
+            justify-content:start;
+            gap: 10px;
+          
         }
+        .soc-img img{
+            width: 20px;
+            height: 20px;
+        }
+        
         .log{
             width:100%;
             display: flex;
-            justify-content: center;
+            justify-content:center;
         }
         .cen h3{
-        text-align: center;
+        text-align:start;
+        font-size: 4.5vw;
         }
         .cen p{
-        text-align: center;
+            font-size:4vw !important;
         }
-        .pol{
         
-            width:100%;
+        .pol{
+            padding-top:11%;
+            width:60%;
             height:150px;
-           
         }
-        .dow{
-        width: 100%;
-        padding-left: 23.5%;
-          
+        
+        .cen{
+            width:39%;
+            margin-top: -10%;
         }
+        .pol .cen{
+            width: 100%;
+        }
+        
         .soc-img1{
             display: flex;
-            justify-content:center;
+            justify-content:start !important;
             gap: 20px;
+           
         }
-          
+        .soc-img1 img{
+            width: 20px;
+            height: 20px;
+        }
+        
+        .soc-img1 img{
+            width: 20px;
+            height: 20px;
+        }
+        
 
 
 }
