--- a/contact.css
+++ b/contact.css
@@ -100,6 +100,14 @@ body {
     margin-bottom: 2%;
 }
 
+#inside {
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2%;
+    display: none;
+}
 
 
 .form{
@@ -113,7 +121,7 @@ body {
     width: 82.5%;
     height: 600px;
     text-align: center;
-margin-top:23%;
+margin-top:5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -265,58 +273,42 @@ line-height: 26px; /* 118.182% */
 
 
 
-footer{
+
+  /* footer */
+
+  footer{
     width: 100%;
     height: 250px;
-    margin-top: 17%;
-    padding: 0% 3%;
-    
-    
-  
+    margin-top: 7%;
+  padding: 0% 3%;
+
+
 }
 .up{
     width: 100%;
     height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+display: flex;
+justify-content: center;
+}
 
-}
-.down{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #151515;
-}
-.down span{
-    color: #FFF;
-
-/* met/18-R */
-font-family: Lato;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height:22px; /* 21.6px */
-text-align: center;
-}
 .min-up{
-    width: 78%;
+    width:87%;
     height: 200px;
     display: flex;
     justify-content: center;
     padding:1% 0%;
-   
+
 
 }
+
+
 .log{
     width: 30%;
     height: 170px;
     display: flex;
-    justify-content:start;
+    justify-content:center;
 
- padding:2.5% 0%;
+ padding:1% 0%;
  
 }
 
@@ -324,14 +316,29 @@ text-align: center;
     width: 120px;
     height: 120px;
 }
+
+
+#fl-ex{
+    width:40%;
+    height:170px;
+    display: flex;
+    justify-content:start;
+}
+
+
 .pol{
 
-    width: 25%;
+    width:60%;
     height: 170px;
    display: flex;
    justify-content:center;
-   padding:1% 0%;
+  
 
+
+}
+.cen p a{
+    color: #FFF;
+    text-decoration: none;
 }
 .cen{
     width: 70%;
@@ -358,15 +365,12 @@ font-weight: 300;
 text-align: start;
 line-height: 18px;
 }
-.cen p a{
-    color: #FFF;
-    text-decoration: none;
-}
 .soc{
 
-    width: 20%;
+    width: 40%;
     height: 170px;
-    padding:1% 0%;
+    
+
 
 }
 .soc-img{
@@ -390,15 +394,37 @@ line-height: 18px;
 }
 .dow{
 
-    width: 20%;
+    width: 30%;
     height: 170px;
-    padding:1% 0%;
+
   
 }
 
+
+.down{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #151515;
+}
+.down span{
+    color: #FFF;
+
+/* met/18-R */
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height:22px; /* 21.6px */
+text-align: center;
+}
+
+
 @media(max-width:1300px){
    
-
+  
     .menu-toggle {
         width: 100px;
         display: block;
@@ -415,10 +441,28 @@ line-height: 18px;
     #side-logo {
         display: none;
      }
+
+     #inside {
+       
+        display:block;
+        height:0px;
+        
+    }
+    #menu-Toggle{
+        position: fixed;
+        top:-2%;
+        left:85%;
+    }
+    #inside-logo{
+       
+        display:flex;
+        justify-content: space-between;
+        padding-top: 20%;
+    }
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;
+     
 
     }
     .nav-links {
@@ -427,11 +471,15 @@ line-height: 18px;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw; /* Full viewport width */
+        height: 100vh; /* Full viewport height */
+        background: rgba(0, 0, 0, 0.8); /* Black with 80% opacity */
+        padding: 0;
+        margin: 0;
+        z-index: 1000;
         
     }
  
@@ -475,29 +523,7 @@ line-height: 18px;
     }
 
 
-    
-    .min-up{
-        width: 95%;
-    }
-    .log{
 
-        width: 25%;
-        
-    }
-    .pol{
-        width: 25%;
-
-    }
-    .cen p{
-     
-        padding:0%;
-    }
-    .soc{
-        width: 25%;
-    }
-    .dow{
-        width: 25%;
-    }
 
 }
 
@@ -507,7 +533,82 @@ line-height: 18px;
     position:absolute;
     font-weight: 300;
     left:70%;
-    top: -10px;
+    top: -5px;
+    }
+    footer{
+        width: 100%;
+        height:700px;
+        margin-top: 20%;
+      overflow: hidden;
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 650px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
+    .soc{
+    
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
+    }
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align:start;
+    }
+    .cen p{
+    text-align:start;
+    }
+    .pol{
+    
+        width:50%;
+        height:auto;
+      
+       
+    }
+    .cen{
+        width:30%;
+        padding:2% 0%;
+    }
+    .dow{
+    width:100%;
+    height:auto;
+    display: flex;
+    justify-content:end;
+      
+    }
+    .soc-img1{
+       
+        width: 150px;
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .pol .cen{
+        width: 100%;
     }
 }
 
@@ -517,13 +618,18 @@ line-height: 18px;
     position:absolute;
     font-weight: 300;
     left:70%;
-    top: -5px;
+    top: -2px;
     }
 }
 
 
 
 @media (max-width: 768px) {
+    #menu-Toggle{
+        position: fixed;
+        top:0%;
+        left:80%;
+    }
     .menu-toggle {
         display: block;
     position:absolute;
@@ -542,20 +648,9 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;  
+      
     }
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
-        
-    }
+
  
     .nav-links li a{
         width:100%;
@@ -570,9 +665,9 @@ line-height: 18px;
         
        }
        .in-form{
-         height: 1000px;
+         height:800px;
          flex-direction:column;
-         margin-top: 10%;
+         margin-top:0%;
          padding-bottom: 20%;
     
        }
@@ -583,8 +678,10 @@ line-height: 18px;
         }
        .tag{
         flex-direction: column;
-        justify-content: space-evenly;
-        height: 400px;
+        justify-content:space-evenly;
+        align-items: center;
+        height: 200px;
+        margin-top: 5%;
    
        }
        .side-border{
@@ -599,7 +696,7 @@ line-height: 18px;
     footer{
         width: 100%;
         height:700px;
-   
+    
       
     }
     .up{
@@ -609,59 +706,168 @@ line-height: 18px;
     }
     .min-up{
         width: 100%;
-        height: 700px;
+        height: 650px;
      flex-direction: column;
      justify-content: center;
     
     }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
     .soc{
     
-        width:100%;
-        height: 150px;
-        padding:9% 0%;
-        padding-left: 23.5%;
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
     }
     .soc-img{
         display: flex;
-        justify-content:center;
+        justify-content:start;
         gap: 20px;
     }
     .log{
         width:100%;
+        height: auto;
         display: flex;
         justify-content: center;
     }
     .cen h3{
-    text-align: center;
+    text-align:start;
     }
     .cen p{
-    text-align: center;
+    text-align:start;
     }
     .pol{
     
-        width:100%;
-        height:150px;
+        width:50%;
+        height:auto;
+      
        
     }
     .dow{
     width: 100%;
-    padding-left: 23.5%;
+    height:auto;
+
       
     }
     .soc-img1{
+       
+
         display: flex;
-        justify-content:center;
+        justify-content:start;
         gap: 20px;
     }
 }
 
 
-@media (max-width:400px) {
+@media(max-width:700px){
+
+
+         .dow{
+            width: 100%;
+       
+            }
+            .soc-img1{
+                width:100px;
+                display: flex;
+                justify-content:start !important;
+            }
+      
+        .soc-img{
+            display: flex;
+            justify-content:start;
+            gap: 10px;
+          
+        }
+        .soc-img img{
+            width: 20px;
+            height: 20px;
+        }
+    
+        .cen h3{
+            text-align:start;
+            font-size: 3vw;
+            }
+            .cen p{
+                font-size: 2.5vw !important;
+            }
+    
+        .soc-img1{
+            display: flex;
+            justify-content:start !important;
+            gap: 20px;
+            width: 130px;
+        }
+        .soc-img1 img{
+            width: 23px;
+            height: 23px;
+        }
+        .cen{
+            margin-top: -2%;
+        }
+   
+}
+@media(max-width:650px){
+    .soc-img1{
+        display: flex;
+        justify-content:start !important;
+        gap: 20px;
+        width: 120px;
+    }
+}
+
+@media (max-width:600px){
 
     .menu-toggle {
         display: block;
     position:absolute;
     left:65%;
+    top: 10px;
+    }
+
+
+}
+
+@media(max-width:550px){
+    .soc-img1{
+        display: flex;
+        justify-content:start !important;
+        gap: 20px;
+        width: 100px;
+    }
+}
+
+
+@media(max-width:450px){
+    .soc-img1{
+        display: flex;
+        justify-content:start!important;
+        gap: 20px;
+        width: 90px;
+    }
+    .cen{
+        margin-top:-10%;
+    }
+    .pol{
+        padding-top:2%;
+    }
+}
+
+
+@media (max-width:400px) {
+    #menu-Toggle{
+        position: fixed;
+        top:2%;
+        left:73%;
+    }
+
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:68%;
     top: 15px;
     }
     .logo{
@@ -675,20 +881,9 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;  
-    }
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
         
     }
+
  
     .nav-links li a{
         width:100%;
@@ -703,9 +898,9 @@ line-height: 18px;
      
     }
     .in-form{
-      height: 1300px;
+      height:900px;
       flex-direction:column;
-      margin-top: 50%;
+      margin-top:0%;
  
     }
     .main{
@@ -716,7 +911,7 @@ line-height: 18px;
     .tag{
      flex-direction: column;
      justify-content: space-evenly;
-     height: 400px;
+     height: 200px;
 
     }
     .side-border{
@@ -728,63 +923,89 @@ line-height: 18px;
 flex-direction: column;
  }
 
- footer{
-     width: 100%;
-     height:700px;
 
+ footer{
+    width: 100%;
+    height:700px;
+
+  
+}
+.up{
+    width: 100%;
+    height: 650px;
+
+}
+.min-up{
+    width: 100%;
+    height: 700px;
+ flex-direction: column;
+ justify-content: center;
+
+}
+#fl-ex{
+    width: 100%;
+}
+.soc{
+
+    width:50%;
+    height: 150px;
+    padding:9% 0%;
+    padding-left:10%;
+}
+.soc-img{
+    display: flex;
+    justify-content:start;
+    gap: 10px;
+  
+}
+.soc-img img{
+    width: 20px;
+    height: 20px;
+}
+
+.log{
+    width:100%;
+    display: flex;
+    justify-content:center;
+}
+.cen h3{
+text-align:start;
+font-size: 4.5vw;
+}
+.cen p{
+    font-size:4vw !important;
+}
+
+.pol{
+    padding-top:11%;
+    width:60%;
+    height:150px;
+}
+.pol .cen{
+    width: 100%;
+}
+.cen{
+    width:39%;
+    margin-top: -10%;
+}
+.dow{
+width:100%;
+height:auto;
+display: flex;
+justify-content:end;
+  
+}
+.soc-img1{
    
- }
- .up{
-     width: 100%;
-     height: 650px;
- 
- }
- .min-up{
-     width: 100%;
-     height: 700px;
-  flex-direction: column;
-  justify-content: center;
- 
- }
- .soc{
- 
-     width:100%;
-     height: 150px;
-     padding:9% 0%;
-     padding-left: 23.5%;
- }
- .soc-img{
-     display: flex;
-     justify-content:center;
-     gap: 20px;
- }
- .log{
-     width:100%;
-     display: flex;
-     justify-content: center;
- }
- .cen h3{
- text-align: center;
- }
- .cen p{
- text-align: center;
- }
- .pol{
- 
-     width:100%;
-     height:150px;
-    
- }
- .dow{
- width: 100%;
- padding-left: 23.5%;
-   
- }
- .soc-img1{
-     display: flex;
-     justify-content:center;
-     gap: 20px;
- }
+    width: 150px;
+    display: flex;
+    justify-content:start;
+    gap: 20px;
+}
+.soc-img1 img{
+    width: 20px;
+    height: 20px;
+}
 
 
 }
