--- a/privacy.css
+++ b/privacy.css
@@ -101,6 +101,16 @@ body {
   
       
   }
+
+
+  #inside {
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2%;
+    display: none;
+}
   
   
   #side-logo {
@@ -192,56 +202,41 @@ body {
   }
 
 
-footer{
+  /* footer */
+
+  footer{
     width: 100%;
     height: 250px;
- margin-top: 4%;
- padding: 0% 3%;
-  
+    margin-top: 7%;
+  padding: 0% 3%;
+
+
 }
 .up{
     width: 100%;
     height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+display: flex;
+justify-content: center;
+}
 
-}
-.down{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #151515;
-}
-.down span{
-    color: #FFF;
-
-/* met/18-R */
-font-family: Lato;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height:22px; /* 21.6px */
-text-align: center;
-}
 .min-up{
-    width: 78%;
+    width:87%;
     height: 200px;
     display: flex;
     justify-content: center;
     padding:1% 0%;
-   
+
 
 }
+
+
 .log{
     width: 30%;
     height: 170px;
     display: flex;
-    justify-content:start;
+    justify-content:center;
 
- padding:2.5% 0%;
+ padding:1% 0%;
  
 }
 
@@ -249,18 +244,35 @@ text-align: center;
     width: 120px;
     height: 120px;
 }
+
+
+#fl-ex{
+    width:40%;
+    height:170px;
+    display: flex;
+    justify-content:start;
+}
+
+
 .pol{
 
-    width: 25%;
+    width:60%;
     height: 170px;
    display: flex;
    justify-content:center;
-   padding:1% 0%;
+  
 
+
+}
+.cen p a{
+    color: #FFF;
+    text-decoration: none;
 }
 .cen{
     width: 70%;
     height:150px;
+   
+  
 }
 .cen h3{
     color: #FFF;
@@ -281,15 +293,12 @@ font-weight: 300;
 text-align: start;
 line-height: 18px;
 }
-.cen p a{
-    color: #FFF;
-    text-decoration: none;
-}
 .soc{
 
-    width: 20%;
+    width: 40%;
     height: 170px;
-    padding:1% 0%;
+    
+
 
 }
 .soc-img{
@@ -313,10 +322,175 @@ line-height: 18px;
 }
 .dow{
 
-    width: 20%;
+    width: 30%;
     height: 170px;
-    padding:1% 0%;
+
   
+}
+
+
+.down{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #151515;
+}
+.down span{
+    color: #FFF;
+
+/* met/18-R */
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height:22px; /* 21.6px */
+text-align: center;
+}
+
+
+
+@media(max-width:1300px){
+    .menu-toggle {
+        display: block;
+    position:absolute;
+    left:77%;
+    top: 30px;
+    }
+    .logo{
+        position:absolute;
+        top:20px;
+    }
+
+    #side-logo {
+        display: none;
+     }
+     #menu-Toggle{
+        position: fixed;
+        top: 5%;
+        left: 87%;
+     }
+    
+    .nav-links.active {
+        display: flex;
+        
+    }
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw; /* Full viewport width */
+        height: 100vh; /* Full viewport height */
+        background: rgba(0, 0, 0, 0.8); /* Black with 80% opacity */
+        padding: 0;
+        margin: 0;
+        z-index: 1000;
+        
+    }
+ 
+    .nav-links li a{
+        width:100%;
+        height: 50px;
+        color:white;
+
+    }
+    #inside {
+       
+        display:block;
+        height:0px;
+        
+    }
+    #inside-logo{
+       
+        display:flex;
+        justify-content: space-between;
+        padding-top: 20%;
+    }
+}
+
+
+
+@media(max-width:900px){
+    footer{
+        width: 100%;
+        height:700px;
+    overflow: hidden;
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 650px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
+    .soc{
+    
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
+    }
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align:start;
+    }
+    .cen p{
+    text-align:start;
+    }
+    .pol{
+    
+        width:50%;
+        height:auto;
+      
+       
+    }
+    .cen{
+        width:30%;
+        padding:2% 0%;
+    }
+    .dow{
+    width:100%;
+    height:auto;
+    display: flex;
+    justify-content:end;
+      
+    }
+    .soc-img1{
+       
+        width: 150px;
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .pol .cen{
+        width: 100%;
+    }
 }
 
 
@@ -340,20 +514,9 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;  
+     
     }
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
-        
-    }
+
  
     .nav-links li a{
         width:100%;
@@ -389,74 +552,157 @@ line-height: 18px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
           }
     
-    
-    footer{
+          footer{
+            width: 100%;
+            height:700px;
+        
+          
+        }
+        .up{
+            width: 100%;
+            height: 650px;
+        
+        }
+        .min-up{
+            width: 100%;
+            height: 650px;
+         flex-direction: column;
+         justify-content: center;
+        
+        }
+        #fl-ex{
+            width: 100%;
+            justify-content: center;
+            padding: 10%;
+        }
+        .soc{
+        
+            width:50%;
+            height:auto;
+            padding-left:25%;
+            
+        }
+        .soc-img{
+            display: flex;
+            justify-content:start;
+            gap: 20px;
+        }
+        .log{
+            width:100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
+        }
+        .cen h3{
+        text-align:start;
+        }
+        .cen p{
+        text-align:start;
+        }
+        .pol{
+        
+            width:50%;
+            height:auto;
+          
+           
+        }
+        .dow{
         width: 100%;
-        height:700px;
-       margin-top: 0%;
-      
-    }
-    .up{
-        width: 100%;
-        height: 650px;
-    
-    }
-    .min-up{
-        width: 100%;
-        height: 700px;
-     flex-direction: column;
-     justify-content: center;
-    
-    }
-    .soc{
-    
-        width:100%;
-        height: 150px;
-        padding:9% 0%;
-        padding-left: 23.5%;
-    }
-    .soc-img{
-        display: flex;
-        justify-content:center;
-        gap: 20px;
-    }
-    .log{
-        width:100%;
-        display: flex;
-        justify-content: center;
-    }
-    .cen h3{
-    text-align: center;
-    }
-    .cen p{
-    text-align: center;
-    }
-    .cen p a{
-        color: #FFF;
-    }
-    .pol{
-    
-        width:100%;
-        height:150px;
-       
-    }
-    .dow{
-    width: 100%;
-    padding-left: 23.5%;
-      
-    }
-    .soc-img1{
-        display: flex;
-        justify-content:center;
-        gap: 20px;
-    }
+
+          
+        }
+        .soc-img1{
+           
+            width: 150px;
+            display: flex;
+            justify-content:start;
+            gap: 20px;
+        }
 
 }
 
 
 
 
+@media(max-width:700px){
+    
+    .dow{
+        width: 100%;
+    
+        }
+        .soc-img1{
+            width:100px;
+            display: flex;
+            justify-content:start !important;
+        }
+  
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 10px;
+      
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
 
+    .cen h3{
+        text-align:start;
+        font-size: 3vw;
+        }
+        .cen p{
+            font-size: 2.5vw !important;
+        }
+
+    .soc-img1{
+        display: flex;
+        justify-content:start!important;
+        gap: 20px;
+      
+    }
+    .soc-img1 img{
+        width: 23px;
+        height: 23px;
+    }
+    .cen{
+        margin-top: -2%;
+    }
+}
+
+
+
+@media(max-width:600px){
+    .soc-img1{
+        display: flex;
+        justify-content:start!important;
+        gap: 20px;
+       
+    }
+}
+
+@media(max-width:550px){
+    .soc-img1{
+        display: flex;
+        justify-content:start!important;
+        gap: 20px;
+       
+    }
+}
+@media(max-width:480px){
+    .soc-img1{
+        display: flex;
+        justify-content:start !important;
+        gap: 20px;
+       
+    }
+    .cen{
+        margin-top:-10%;
+    }
+    .pol{
+        padding-top:2%;
+    }
+}
 
 
 @media (max-width:400px){
@@ -474,20 +720,9 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:40%;  
+      
     }
-    
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content:space-evenly;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
-    }
+
  
     .nav-links li a{
         width:100%;
@@ -525,65 +760,84 @@ line-height: 18px;
             padding:3% 10%;
     
           }
-
-    footer{
-        width: 100%;
-        height:700px;
-       margin-top: -10%;
-      
-    }
-    .up{
-        width: 100%;
-        height: 650px;
-    
-    }
-    .min-up{
-        width: 100%;
-        height: 700px;
-     flex-direction: column;
-     justify-content: center;
-    
-    }
-    .soc{
-    
-        width:100%;
-        height: 150px;
-        padding:9% 0%;
-        padding-left: 23.5%;
-    }
-    .soc-img{
-        display: flex;
-        justify-content:center;
-        gap: 20px;
-    }
-    .log{
-        width:100%;
-        display: flex;
-        justify-content: center;
-    }
-    .cen h3{
-    text-align: center;
-    }
-    .cen p{
-    text-align: center;
-    }
-    .cen p a{
-        color: #FFF;
-    }
-    .pol{
-    
-        width:100%;
-        height:150px;
-       
-    }
-    .dow{
-    width: 100%;
-    padding-left: 23.5%;
-      
-    }
-    .soc-img1{
-        display: flex;
-        justify-content:center;
-        gap: 20px;
-    }
+          footer{
+            width: 100%;
+            height:700px;
+        
+          
+        }
+        .up{
+            width: 100%;
+            height: 650px;
+        
+        }
+        .min-up{
+            width: 100%;
+            height: 700px;
+         flex-direction: column;
+         justify-content: center;
+        
+        }
+        #fl-ex{
+            width: 100%;
+        }
+        .soc{
+        
+            width:50%;
+            height: 150px;
+            padding:9% 0%;
+            padding-left:10%;
+        }
+        .soc-img{
+            display: flex;
+            justify-content:start;
+            gap: 10px;
+          
+        }
+        .soc-img img{
+            width: 20px;
+            height: 20px;
+        }
+        
+        .log{
+            width:100%;
+            display: flex;
+            justify-content:center;
+        }
+        .cen h3{
+        text-align:start;
+        font-size: 4.5vw;
+        }
+        .cen p{
+            font-size:4vw !important;
+        }
+        
+        .pol{
+            padding-top: 11%;
+            width:60%;
+            height:150px;
+        }
+        
+        .dow{
+            width: 100%;
+            padding: 0%;
+            }
+            
+            .cen{
+                width:39%;
+                margin-top: -10%;
+            }
+            .pol .cen{
+                width: 100%;
+            }
+            .soc-img1{
+                display: flex;
+                justify-content:start !important;
+                gap: 20px;
+               
+            }
+        .soc-img1 img{
+            width: 20px;
+            height: 20px;
+        }
 }
