--- a/service.css
+++ b/service.css
@@ -110,7 +110,14 @@ background: black;
     margin-bottom: 2%;
 }
 
-
+#inside {
+    width: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 2%;
+    display: none;
+}
 
 .hero-image{
     width: 100%;
@@ -592,56 +599,41 @@ margin-top: 20%;
    } 
 
 
+  /* footer */
 
-footer{
+  footer{
     width: 100%;
     height: 250px;
     margin-top: 7%;
   padding: 0% 3%;
+
+
 }
 .up{
     width: 100%;
     height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+display: flex;
+justify-content: center;
+}
 
-}
-.down{
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-top: 1px solid #151515;
-}
-.down span{
-    color: #FFF;
-
-/* met/18-R */
-font-family: Lato;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height:22px; /* 21.6px */
-text-align: center;
-}
 .min-up{
-    width: 78%;
+    width:87%;
     height: 200px;
     display: flex;
     justify-content: center;
     padding:1% 0%;
-   
+
 
 }
+
+
 .log{
     width: 30%;
     height: 170px;
     display: flex;
-    justify-content:start;
+    justify-content:center;
 
- padding:2.5% 0%;
+ padding:1% 0%;
  
 }
 
@@ -649,13 +641,24 @@ text-align: center;
     width: 120px;
     height: 120px;
 }
+
+
+#fl-ex{
+    width:40%;
+    height:170px;
+    display: flex;
+    justify-content:start;
+}
+
+
 .pol{
 
-    width: 25%;
+    width:60%;
     height: 170px;
    display: flex;
    justify-content:center;
-   padding:1% 0%;
+  
+
 
 }
 .cen p a{
@@ -689,9 +692,10 @@ line-height: 18px;
 }
 .soc{
 
-    width: 20%;
+    width: 40%;
     height: 170px;
-    padding:1% 0%;
+    
+
 
 }
 .soc-img{
@@ -715,12 +719,32 @@ line-height: 18px;
 }
 .dow{
 
-    width: 20%;
+    width: 30%;
     height: 170px;
-    padding:1% 0%;
+
   
 }
 
+
+.down{
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid #151515;
+}
+.down span{
+    color: #FFF;
+
+/* met/18-R */
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height:22px; /* 21.6px */
+text-align: center;
+}
 @media(max-width:1300px){
 
     .menu-toggle {
@@ -737,21 +761,37 @@ line-height: 18px;
     #side-logo {
         display: none;
      }
+     #inside {
+       
+        display:block;
+        height:0px;
+        
+    }
+    #inside-logo{
+       
+        display:flex;
+        justify-content: space-between;
+        padding-top: 20%;
+    }
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;  
+     
     }
     .nav-links {
         display: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw; /* Full viewport width */
+        height: 100vh; /* Full viewport height */
+        background: rgba(0, 0, 0, 0.8); /* Black with 80% opacity */
+        padding: 0;
+        margin: 0;
+        z-index: 1000;
         
     }
  
@@ -777,12 +817,13 @@ line-height: 18px;
         justify-content: center;
         align-items:end;
         padding: 0% 8%;
+
     }
     .img-text img {
         width: 20px;
         height: 20px;
     margin-bottom:25%;
-       
+      
     }  
      #margon{
    margin-bottom: 3%;
@@ -795,7 +836,7 @@ line-height: 18px;
     }
     
     .img-text p {
-    font-size:14px;     
+    font-size: 1.5vw;     
     }
     .gallery{
         width: 100%;
@@ -887,7 +928,7 @@ line-height: 18px;
        .min-card{
     width:100%;
      height:250px;
-   margin-top: -52.5px;
+   margin-top: -11.5%;
     
     
        }
@@ -903,7 +944,7 @@ line-height: 18px;
         width:100%;
         height:250px;
         margin-left:0%;
-        margin-top: -75px;
+        margin-top:-18.5%;
        }
        .m-card h1{
 
@@ -951,7 +992,7 @@ line-height: 18px;
         margin-top:10%;
        }
        #mb-card{
-        margin-top: -17.5%;
+        margin-top: -19%;
     }
 
        .box-1{
@@ -1065,32 +1106,93 @@ line-height: 18px;
 
 
 
-    .min-up{
-        width: 95%;
-    }
-    .log{
 
-        width: 25%;
-        
-    }
-    .pol{
-        width: 25%;
-
-    }
-    .cen p{
-     
-        padding:0%;
-    }
-    .soc{
-        width: 25%;
-    }
-    .dow{
-        width: 25%;
-    }
 }
 
 
-
+@media(max-width:900px){
+    .img-text p {
+        font-size:2vw;
+        text-align: center;     
+        }
+        footer{
+            width: 100%;
+            height:700px;
+            margin-top:0%;
+            overflow: hidden;
+          
+        }
+        .up{
+            width: 100%;
+            height: 650px;
+        
+        }
+        .min-up{
+            width: 100%;
+            height: 650px;
+         flex-direction: column;
+         justify-content: center;
+        
+        }
+        #fl-ex{
+            width: 100%;
+            justify-content: center;
+            padding: 10%;
+        }
+        .soc{
+        
+            width:50%;
+            height:auto;
+            padding-left:25%;
+            
+        }
+        .soc-img{
+            display: flex;
+            justify-content:start;
+            gap: 20px;
+        }
+        .log{
+            width:100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
+        }
+        .cen h3{
+        text-align:start !important;
+        }
+        .cen p{
+        text-align:start !important;
+        padding: 0%;
+        }
+        .pol{
+        
+            width:50%;
+            height:auto;
+          
+           
+        }
+        .cen{
+            width:30%;
+            padding:2% 0%;
+        }
+        .dow{
+        width:100%;
+        height:auto;
+        display: flex;
+        justify-content:end;
+          
+        }
+        .soc-img1{
+           
+            width: 150px;
+            display: flex;  
+            justify-content:start;
+            gap: 20px;
+        }
+        .pol .cen{
+            width: 100%;
+        }
+}
 
 
 
@@ -1113,20 +1215,9 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:20%;  
+   
     }
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
-        
-    }
+
  
     .nav-links li a{
         width:100%;
@@ -1153,21 +1244,15 @@ line-height: 18px;
         width: 20px;
         height: 20px;
     margin-bottom:25%;
+ 
        
     }  
-     #margon{
-   margin-bottom: 5%;
-   margin-right: 3%;
-       
-    }
-    #margon-2{
-        margin-bottom: 8%;
-        
-    }
+
     
     .img-text p {
-    font-size:20px;     
-    }
+        font-size:2vw;
+        text-align: center;     
+        }
     .gallery{
         width: 100%;
         height: 1000px;
@@ -1258,7 +1343,7 @@ line-height: 18px;
        .min-card{
     width:100%;
      height:250px;
-    margin-top: -39px;
+    margin-top:-12.5%;
     
        }
        .min-card h1{
@@ -1273,7 +1358,7 @@ line-height: 18px;
         width:100%;
         height:250px;
         margin-left:0%;
-        margin-top: -55px;
+        margin-top:-17.5%;
        }
        .m-card h1{
 
@@ -1432,7 +1517,8 @@ line-height: 18px;
        footer{
         width: 100%;
         height:700px;
-       margin-top: -10%;
+        margin-top:0%;
+        overflow: hidden;
       
     }
     .up{
@@ -1442,54 +1528,234 @@ line-height: 18px;
     }
     .min-up{
         width: 100%;
-        height: 700px;
+        height: 650px;
      flex-direction: column;
      justify-content: center;
     
     }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
     .soc{
     
-        width:100%;
-        height: 150px;
-        padding:9% 0%;
-        padding-left: 23.5%;
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
     }
     .soc-img{
         display: flex;
-        justify-content:center;
+        justify-content:start;
         gap: 20px;
     }
     .log{
         width:100%;
+        height: auto;
         display: flex;
-        justify-content: center;
+        justify-content:center;
     }
     .cen h3{
-    text-align: center;
+    text-align:start !important;
     }
     .cen p{
-    text-align: center;
-    }
-    .cen p a{
-        color: #FFF;
+    text-align:start !important;
+    padding: 0%;
     }
     .pol{
     
-        width:100%;
-        height:150px;
+        width:50%;
+        height:auto;
+      
        
     }
     .dow{
     width: 100%;
-    padding-left: 23.5%;
+    height:auto;
+    
       
     }
     .soc-img1{
+       
+       
         display: flex;
-        justify-content:center;
+        justify-content:start;
         gap: 20px;
     }
 }
+
+@media(max-width:650px){
+
+    footer{
+        width: 100%;
+        height:700px;
+        margin-top:-10%;
+        
+      
+    }
+    .up{
+        width: 100%;
+        height: 650px;
+    
+    }
+    .min-up{
+        width: 100%;
+        height: 650px;
+     flex-direction: column;
+     justify-content: center;
+    
+    }
+    #fl-ex{
+        width: 100%;
+        justify-content: center;
+        padding: 10%;
+    }
+    .soc{
+    
+        width:50%;
+        height:auto;
+        padding-left:25%;
+        
+    }
+    .soc-img{
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .log{
+        width:100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+    }
+    .cen h3{
+    text-align:start !important;
+    font-size: 3vw !important;
+    }
+    .cen p{
+    text-align:start !important;
+    font-size: 2.5vw !important;
+    padding: 0%;
+    }
+    .pol{
+    
+        width:50%;
+        height:auto;
+      
+       
+    }
+    .dow{
+    width: 100%;
+    height:auto;
+  
+      
+    }
+    .soc-img1{
+       
+    
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .soc-img1 img{
+        width: 23px;
+        height: 23px;
+    }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+    .cen{
+        margin-top:-6%;
+    }
+
+}
+
+@media(max-width:600px){
+    .soc-img1{
+       
+      
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .img-text p {
+        font-size:4vw;
+        text-align: center; 
+       
+        }
+        .img-text img {
+            width: 20px;
+            height: 20px;
+        
+    }  
+    
+        #margon{
+            margin-bottom:11%;
+            margin-right:5%;
+                
+             }
+             #margon-2{
+                 margin-bottom:11%;
+                 margin-left: 5%;
+             }  
+ 
+}
+
+@media(max-width:542px){
+   
+        .soc-img1{
+           
+           
+            display: flex;
+            justify-content:start;
+            gap: 20px;
+        }
+    .img-text p {
+        font-size:4vw; 
+        text-align: center;    
+        }
+        #margon{
+            margin-bottom:17%;
+            margin-right:5%;
+                
+             }
+             #margon-2{
+                 margin-bottom:17%;
+                 margin-left: 5%;
+             } 
+ 
+}
+@media(max-width:500px){
+    .img-text p {
+        font-size:4vw;
+        text-align: center;     
+        }
+        .soc-img1{
+           
+        
+            display: flex;
+            justify-content:start;
+            gap: 20px;
+        }
+}
+@media(max-width:450px){
+    .soc-img1{
+           
+   
+        display: flex;
+        justify-content:start;
+        gap: 20px;
+    }
+    .cen{
+        margin-top:-10%;
+    }
+    .pol{
+        padding-top:2%;
+    }
+}
+
 
 @media (max-width:400px) {
 
@@ -1507,20 +1773,10 @@ line-height: 18px;
     
     .nav-links.active {
         display: flex;
-       margin-top:40%;  
+         
     }
     
-    .nav-links {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content:space-evenly;
-        width: 100%;
-        height: 300px;
-        background:black;
-        padding: 0%;
-        margin-top: 10%;
-    }
+
  
     .nav-links li a{
         width:100%;
@@ -1555,14 +1811,17 @@ line-height: 18px;
        
     }  
      #margon{
-   margin-bottom: 7%;
+   margin-bottom: 18%;
    margin-right: 3%;
        
     }
 
     
     .img-text p {
-    font-size:20px;     
+     
+            font-size:4vw;
+            text-align: center;     
+         
     }
     .gallery{
         width: 100%;
@@ -1653,7 +1912,7 @@ line-height: 18px;
        .min-card{
     width:100%;
      height:250px;
-    margin-top: -16px;
+    margin-top: -11.5%;
     
        }
        .min-card h1{
@@ -1668,7 +1927,7 @@ line-height: 18px;
         width:100%;
         height:250px;
         margin-left:0%;
-        margin-top: -30px;
+        margin-top:-17.5%;
        }
        .m-card h1{
 
@@ -1824,7 +2083,7 @@ line-height: 18px;
        footer{
         width: 100%;
         height:700px;
-       margin-top: -10%;
+       margin-top: -40%;
       
     }
     .up{
@@ -1839,47 +2098,72 @@ line-height: 18px;
      justify-content: center;
     
     }
+    #fl-ex{
+        width: 100%;
+    }
     .soc{
     
-        width:100%;
+        width:50%;
         height: 150px;
         padding:9% 0%;
-        padding-left: 23.5%;
+        padding-left:10%;
     }
     .soc-img{
         display: flex;
-        justify-content:center;
-        gap: 20px;
+        justify-content:start;
+        gap: 10px;
+      
     }
+    .soc-img img{
+        width: 20px;
+        height: 20px;
+    }
+    
     .log{
         width:100%;
         display: flex;
-        justify-content: center;
+        justify-content:center;
     }
     .cen h3{
-    text-align: center;
+    text-align:center;
+    font-size: 4.5vw !important;
     }
     .cen p{
-    text-align: center;
+        font-size:4vw !important;
+        padding: 0%;
     }
-    .cen p a{
-        color: #FFF;
-    }
-    .pol{
     
-        width:100%;
+    .pol{
+        padding-top:11%;
+        width:50%;
         height:150px;
-       
+     
+    }
+    .pol .cen{
+        width: 100%;
+    }
+    .cen{
+        width:42%;
+       margin-top: -10%;
+      
     }
     .dow{
-    width: 100%;
-    padding-left: 23.5%;
+    width:100%;
+    height:auto;
+    display: flex;
+    justify-content:end;
       
     }
     .soc-img1{
+       
+       
         display: flex;
-        justify-content:center;
+        justify-content:start;
         gap: 20px;
+    }
+    .soc-img1 img{
+        width: 20px;
+        height: 20px;
     }
 
 
